# lablab-hackathon-amd-agent-

./: CLAUDE.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  SESSION-NOTES.md  USAGE.md
benches/: bench_agents.rs
chroma/: Dockerfile
config/: agents.toml  models.toml
prompts/: analyst.md  builder.md  critic.md  planner.md  tester.md
src/: lib.rs  main.rs
src/agents/: analyst.rs  base.rs  builder.rs  critic.rs  mod.rs  planner.rs  tester.rs
src/analysis/: dep_mapper.rs  issue_detect.rs  mod.rs  repo_parser.rs
src/cli/: analyze.rs  demo.rs  mod.rs  validation.rs
src/core/: mod.rs  orchestrator.rs  state.rs  types.rs
src/execution/: file_manager.rs  git_ops.rs  mod.rs  runner.rs  test_sim.rs
src/llm/: client.rs  client_shared.rs  config.rs  mod.rs  provider.rs  routing.rs
src/llm/providers/: anthropic.rs  llama_cpp.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  types.rs  vllm.rs
src/memory/: compression.rs  mod.rs  search.rs  semantic.rs  store.rs
src/middleware/: chimera.rs  gate.rs  mod.rs  types.rs
tests/: integration.rs
